force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Comments_Ops__c.field-meta.xml
<CustomField>
    <fullName>Comments_Ops__c</fullName>
    <label>Comments Ops</label>
    <type>TextArea</type>
</CustomField>