force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Created_date_Date__c.field-meta.xml
<CustomField>
    <fullName>Created_date_Date__c</fullName>
    <description>Get the date as a date from the created date with time</description>
    <formula>DATEVALUE( CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Get the date as a date from the created date with time</inlineHelpText>
    <label>Created date Date</label>
    <type>Date</type>
</CustomField>