force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Creation_Date_Today_Delta__c.field-meta.xml
<CustomField>
    <fullName>Creation_Date_Today_Delta__c</fullName>
    <description>Delta between creation date and Current date</description>
    <formula>NOW() -  CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Delta between creation date and Current date</inlineHelpText>
    <label>Creation Date Today Delta</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>