force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Credit_Committee_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Credit_Committee_Approval_Date__c</fullName>
    <label>Credit Committee Approval Date</label>
    <type>Date</type>
</CustomField>