force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Credit_Committee_score__c.field-meta.xml
<CustomField>
    <fullName>Credit_Committee_score__c</fullName>
    <label>Credit Committee score</label>
    <precision>11</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>