force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Credit_Committee_Status__c.field-meta.xml
<CustomField>
    <fullName>Credit_Committee_Status__c</fullName>
    <defaultValue>&quot;Not Yet Reviewed&quot;</defaultValue>
    <inlineHelpText>One the  Risk committee Credit done, Update this field</inlineHelpText>
    <label>Credit Committee Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Yet Reviewed</fullName>
                <default>true</default>
                <label>Not Yet Reviewed</label>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Need Additional Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>