force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Credit_Insurance_Coverage_Starting_Date__c.field-meta.xml
<CustomField>
    <fullName>Credit_Insurance_Coverage_Starting_Date__c</fullName>
    <inlineHelpText>Credit Insurance Starting Date</inlineHelpText>
    <label>Credit Insurance Coverage Starting Date</label>
    <type>Date</type>
</CustomField>