force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Credit_Insurance_Limit_confirmed_USD__c.field-meta.xml
<CustomField>
    <fullName>Credit_Insurance_Limit_confirmed_USD__c</fullName>
    <description>this is the old field. all CL should be on the buyer record now.</description>
    <label>*do not use* Credit Insurance Limit USD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>