force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Credit_Insurance_limit_requested_USD__c.field-meta.xml
<CustomField>
    <fullName>Credit_Insurance_limit_requested_USD__c</fullName>
    <description>credit insurance info must be stored on the account record now</description>
    <label>*do not use* Credit Ins requested USD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>