force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Credit_Insurer_can_disclose_sup_name__c.field-meta.xml
<CustomField>
    <fullName>Credit_Insurer_can_disclose_sup_name__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credit Insurer can disclose sup name</label>
    <type>Checkbox</type>
</CustomField>