force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Credit_Limit_Avalaible__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit_Avalaible__c</fullName>
    <description>Credit Limit Incomlend-All invoice value in progress</description>
    <formula>CL_Incomlend_for_this_Map__c - invoice_amount_in_progress_prelisting__c * If( Name = &apos;10698&apos;, 0.9/0.87, 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Credit Limit Incomlend-All invoice value in progress</inlineHelpText>
    <label>CL Avalaible for this Map</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>