force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Credit_Limit_Converted__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit_Converted__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When the Credit Limit on the buyer is converted by the risk team , if not Check the Map Approval is impossible</inlineHelpText>
    <label>Credit Limit Converted</label>
    <type>Checkbox</type>
</CustomField>