force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Credit_Limit_Provided_by_Insurer__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit_Provided_by_Insurer__c</fullName>
    <formula>Buyer__r.Credit_Limited_Provided_by_Insurer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Limit Provided by Insurer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>