force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Credit_Terms__c.field-meta.xml
<CustomField>
    <fullName>Credit_Terms__c</fullName>
    <label>Credit Terms (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>