force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Date_Overdue_New_Pricing_Applicable__c.field-meta.xml
<CustomField>
    <fullName>Date_Overdue_New_Pricing_Applicable__c</fullName>
    <inlineHelpText>Date When the ARPA Addendum or New ARPA for the new Pricing overdue</inlineHelpText>
    <label>Date Overdue New Pricing Applicable</label>
    <type>Date</type>
</CustomField>