force-app/main/default/objects/Supplier_Buyer_Map__c/fields/day_taken__c.field-meta.xml
<CustomField>
    <fullName>day_taken__c</fullName>
    <formula>approval_date__c  -    Created_date_Date__c</formula>
    <label>day taken</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>