force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Discount_risk__c.field-meta.xml
<CustomField>
    <fullName>Discount_risk__c</fullName>
    <label>Discount risk</label>
    <type>TextArea</type>
</CustomField>