force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Dispute_risk__c.field-meta.xml
<CustomField>
    <fullName>Dispute_risk__c</fullName>
    <label>Dispute risk</label>
    <type>TextArea</type>
</CustomField>