force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Email_buyer_for_reminder_email_2__c.field-meta.xml
<CustomField>
    <fullName>Email_buyer_for_reminder_email_2__c</fullName>
    <label>Email buyer for reminder email 2</label>
    <type>Email</type>
</CustomField>