force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Email_Supplier_for_invoice_validation__c.field-meta.xml
<CustomField>
    <fullName>Email_Supplier_for_invoice_validation__c</fullName>
    <description>Primary contact email from Supplier account</description>
    <formula>Supplier__r.Primary_contact_email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Primary contact email from Supplier account</inlineHelpText>
    <label>Email Supplier for invoice validation</label>
    <type>Text</type>
</CustomField>