force-app/main/default/objects/Supplier_Buyer_Map__c/fields/enforceability_risk__c.field-meta.xml
<CustomField>
    <fullName>enforceability_risk__c</fullName>
    <label>Enforceability risk</label>
    <type>TextArea</type>
</CustomField>