force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Eolis_actual_response_date__c.field-meta.xml
<CustomField>
    <fullName>Eolis_actual_response_date__c</fullName>
    <label>Eolis actual response date</label>
    <type>Date</type>
</CustomField>