force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Eolis_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Eolis_Request_Date__c</fullName>
    <label>Eolis Request Date</label>
    <type>Date</type>
</CustomField>