force-app/main/default/objects/Supplier_Buyer_Map__c/fields/ESG__c.field-meta.xml
<CustomField>
    <fullName>ESG__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ESG</label>
    <type>Checkbox</type>
</CustomField>