force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Estimated_next_invoice_amount__c.field-meta.xml
<CustomField>
    <fullName>Estimated_next_invoice_amount__c</fullName>
    <label>Estimated First Cycle Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>