force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Estimed_Next_invoice_Amount_USD__c.field-meta.xml
<CustomField>
    <fullName>Estimed_Next_invoice_Amount_USD__c</fullName>
    <formula>Estimated_next_invoice_amount__c *  Marketplace__r.FX_Rate_for_MI__r.rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimed First Cycle  Amount USD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>