force-app/main/default/objects/Supplier_Buyer_Map__c/fields/expected_adj_monthly_revenue_USD_Equiv__c.field-meta.xml
<CustomField>
    <fullName>expected_adj_monthly_revenue_USD_Equiv__c</fullName>
    <formula>expected_monthly_revenue_USD_Equiv__c 
*
  
 CASE( IF( temp_buyer_driven_flag__c ,Buyer_Lead_Rating__c, Supplier_Lead_Rating__c) , &apos;Hot&apos;, 0.75, &apos;Warm&apos;, 0.5,&apos;Cold&apos;, 0.2,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>expected adj monthly revenue USD Equiv</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>