force-app/main/default/objects/Supplier_Buyer_Map__c/fields/expected_funding_demand_at_any_time__c.field-meta.xml
<CustomField>
    <fullName>expected_funding_demand_at_any_time__c</fullName>
    <formula>if(projected_average_invoice_value__c = 0,0,
if(expected_funding_period__c * Projected_Total_Yearly_Invoice_Count__c &lt; 365,
Projected_total_yearly_Invoice_Value__c / Projected_Total_Yearly_Invoice_Count__c,
expected_funding_period__c / 365 *  (nullvalue( Max_advance_amount_percentage__c ,0.9)* Projected_total_yearly_Invoice_Value__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>expected funding demand at any time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>