force-app/main/default/objects/Supplier_Buyer_Map__c/fields/expected_funding_period__c.field-meta.xml
<CustomField>
    <fullName>expected_funding_period__c</fullName>
    <label>expected funding period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>