force-app/main/default/objects/Supplier_Buyer_Map__c/fields/expected_monthly_revenue_USD_Equiv__c.field-meta.xml
<CustomField>
    <fullName>expected_monthly_revenue_USD_Equiv__c</fullName>
    <formula>expected_yearly_revenue_USD_Equiv__c  / 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>expected monthly revenue USD Equiv</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>