force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Expected_Onboarded_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Onboarded_Date__c</fullName>
    <formula>IF(   ISBLANK( Expected_Onboarding_Date_Manual__c), CreatedDate+42,   DATETIMEVALUE(Expected_Onboarding_Date_Manual__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected Onboarded Date</label>
    <type>Date</type>
</CustomField>