force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Expected_Onboarding_Date_Manual__c.field-meta.xml
<CustomField>
    <fullName>Expected_Onboarding_Date_Manual__c</fullName>
    <label>Expected Onboarding Date Manual</label>
    <type>Date</type>
</CustomField>