force-app/main/default/objects/Supplier_Buyer_Map__c/fields/expected_typical_platform_fee__c.field-meta.xml
<CustomField>
    <fullName>expected_typical_platform_fee__c</fullName>
    <label>expected typical platform fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>