force-app/main/default/objects/Supplier_Buyer_Map__c/fields/expected_yearly_revenue_USD_Equiv__c.field-meta.xml
<CustomField>
    <fullName>expected_yearly_revenue_USD_Equiv__c</fullName>
    <formula>projected_revenue_per_invoice_USD__c *  Projected_Total_Yearly_Invoice_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>expected yearly revenue USD Equiv</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>