force-app/main/default/objects/Supplier_Buyer_Map__c/fields/External_View__c.field-meta.xml
<CustomField>
    <fullName>External_View__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check to have an externat layout view , uncheck to come back to a normal view</inlineHelpText>
    <label>External View</label>
    <type>Checkbox</type>
</CustomField>