force-app/main/default/objects/Supplier_Buyer_Map__c/fields/FDR_Rate_Type__c.field-meta.xml
<CustomField>
    <fullName>FDR_Rate_Type__c</fullName>
    <formula>If( Funding_Spread__c &gt; 0, &apos;Floating&apos;, &apos;Fixed&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FDR Rate Type</label>
    <type>Text</type>
</CustomField>