force-app/main/default/objects/Supplier_Buyer_Map__c/fields/First_Cycle__c.field-meta.xml
<CustomField>
    <fullName>First_Cycle__c</fullName>
    <formula>IF( invoice_deal_closed_amount__c &gt;0, False, True)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Cycle</label>
    <type>Checkbox</type>
</CustomField>