force-app/main/default/objects/Supplier_Buyer_Map__c/fields/First_Cycle_Instalment__c.field-meta.xml
<CustomField>
    <fullName>First_Cycle_Instalment__c</fullName>
    <formula>IF (  TEXT(Insurance_Premium_Logic__c) = &quot;Instalments&quot;, (CL_Incomlend_for_this_Map__c *   Insurance_cost_for_Supplier__c * 360/ Credit_Terms__c)/2, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Cycle Instalment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>