force-app/main/default/objects/Supplier_Buyer_Map__c/fields/First_Funded_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Funded_Invoice_Date__c</fullName>
    <inlineHelpText>Date of the first funded invoice after 1st of May 2021</inlineHelpText>
    <label>First Funded Invoice Date</label>
    <type>Date</type>
</CustomField>