force-app/main/default/objects/Supplier_Buyer_Map__c/fields/first_supplier_to_buyer_sale__c.field-meta.xml
<CustomField>
    <fullName>first_supplier_to_buyer_sale__c</fullName>
    <label>first supplier to buyer sale</label>
    <type>Date</type>
</CustomField>