force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Floating_Rate_Margin__c.field-meta.xml
<CustomField>
    <fullName>Floating_Rate_Margin__c</fullName>
    <inlineHelpText>per annum</inlineHelpText>
    <label>Floating Rate Margin</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>