force-app/main/default/objects/Supplier_Buyer_Map__c/fields/For_Sales_Owner_Buyer__c.field-meta.xml
<CustomField>
    <fullName>For_Sales_Owner_Buyer__c</fullName>
    <label>For Sales Owner Buyer</label>
    <length>127</length>
    <type>Text</type>
</CustomField>