force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Freight_Forwarder_Contact__c.field-meta.xml
<CustomField>
    <fullName>Freight_Forwarder_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Freight Forwarder Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Supplier Buyer Maps (Freight Forwarder Contact)</relationshipLabel>
    <relationshipName>Supplier_Buyer_Maps2</relationshipName>
    <type>Lookup</type>
</CustomField>