force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Freight_Forwarder_Contact_Notes__c.field-meta.xml
<CustomField>
    <fullName>Freight_Forwarder_Contact_Notes__c</fullName>
    <label>Freight Forwarder Contact Notes</label>
    <type>TextArea</type>
</CustomField>