force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Funded_amount_in_progress_prelisting__c.field-meta.xml
<CustomField>
    <fullName>Funded_amount_in_progress_prelisting__c</fullName>
    <inlineHelpText>Requested amount in progress prelisting onmarketplace</inlineHelpText>
    <label>Funded amount in progress prelisting</label>
    <summarizedField>invoice_finance_deal__c.requested_amount__c</summarizedField>
    <summaryFilterItems>
        <field>invoice_finance_deal__c.Phase__c</field>
        <operation>equals</operation>
        <value>1:PRE LISTING, 2:ON MARKETPLACE, 3:IN PROGRESS</value>
    </summaryFilterItems>
    <summaryForeignKey>invoice_finance_deal__c.Supplier_Buyer_Map__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>