force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Funder_Discount_Rate__c.field-meta.xml
<CustomField>
    <fullName>Funder_Discount_Rate__c</fullName>
    <description>Funder Discount Rate %</description>
    <inlineHelpText>Funder Discount Rate %</inlineHelpText>
    <label>Funder Discount Rate</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>