force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Funder_Discount_Rate_Maximum__c.field-meta.xml
<CustomField>
    <fullName>Funder_Discount_Rate_Maximum__c</fullName>
    <formula>((Supplier_Discount_Rate__c/ 0.9)  -  Minimum_Spread__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Funder Discount Rate Maximum</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>