force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Funding_Spread__c.field-meta.xml
<CustomField>
    <fullName>Funding_Spread__c</fullName>
    <inlineHelpText>per annum</inlineHelpText>
    <label>Funding Spread</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>