force-app/main/default/objects/Supplier_Buyer_Map__c/fields/General_Status_Map__c.field-meta.xml
<CustomField>
    <fullName>General_Status_Map__c</fullName>
    <defaultValue>&quot;Active&quot;</defaultValue>
    <description>General status of the Map</description>
    <inlineHelpText>General status of the Map</inlineHelpText>
    <label>General Status Map</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Dormant</fullName>
            </value>
            <value>
                <fullName>To be Deleted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>