force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Geographical_zone__c.field-meta.xml
<CustomField>
    <fullName>Geographical_zone__c</fullName>
    <label>Geographical zone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Zone 1</fullName>
            </value>
            <value>
                <fullName>Zone 2</fullName>
            </value>
            <value>
                <fullName>Zone 3</fullName>
            </value>
            <value>
                <fullName>Zone 4</fullName>
            </value>
            <value>
                <fullName>Zone 5</fullName>
            </value>
            <value>
                <fullName>Zone 6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>