force-app/main/default/objects/Supplier_Buyer_Map__c/fields/GICS_Classification__c.field-meta.xml
<CustomField>
    <fullName>GICS_Classification__c</fullName>
    <label>GICS Sub-Industry</label>
    <length>75</length>
    <type>Text</type>
</CustomField>