force-app/main/default/objects/Supplier_Buyer_Map__c/fields/GICS_Industry__c.field-meta.xml
<CustomField>
    <fullName>GICS_Industry__c</fullName>
    <label>GICS Industry</label>
    <length>75</length>
    <type>Text</type>
</CustomField>