force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Good_or_Services_Offered__c.field-meta.xml
<CustomField>
    <fullName>Good_or_Services_Offered__c</fullName>
    <formula>Supplier__r.goods_or_services_offered_text__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Good or Services Offered</label>
    <type>Text</type>
</CustomField>