force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Goods_and_Services_new__c.field-meta.xml
<CustomField>
    <fullName>Goods_and_Services_new__c</fullName>
    <label>Goods and Services (new)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Oil &amp; Gas</fullName>
            </value>
            <value>
                <fullName>Oil &amp; Gas Equipment</fullName>
            </value>
            <value>
                <fullName>Thermal Coal</fullName>
            </value>
            <value>
                <fullName>Diversified Chemicals</fullName>
            </value>
            <value>
                <fullName>Fertilizers &amp; Agricultural Chemicals</fullName>
            </value>
            <value>
                <fullName>Construction Materials</fullName>
            </value>
            <value>
                <fullName>Metal, Glass &amp; Plastic Containers</fullName>
                <label>Metal &amp; Glass &amp; Plastic Containers</label>
            </value>
            <value>
                <fullName>Forest Products</fullName>
            </value>
            <value>
                <fullName>Paper Products</fullName>
            </value>
            <value>
                <fullName>Aluminium</fullName>
            </value>
            <value>
                <fullName>Other Metals</fullName>
            </value>
            <value>
                <fullName>Copper</fullName>
            </value>
            <value>
                <fullName>Nickel</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Zinc</fullName>
            </value>
            <value>
                <fullName>Tin</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Precious Metals &amp; Minerals</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Metallurgical Coal</fullName>
            </value>
            <value>
                <fullName>Iron &amp; Steel</fullName>
            </value>
            <value>
                <fullName>Aerospace &amp; Defense Equipment</fullName>
            </value>
            <value>
                <fullName>Electrical Components &amp; Equipment</fullName>
            </value>
            <value>
                <fullName>Heavy Electrical Equipment</fullName>
            </value>
            <value>
                <fullName>Construction Machinery &amp; Heavy Trucks</fullName>
            </value>
            <value>
                <fullName>Agricultural &amp; Farm Machinery</fullName>
            </value>
            <value>
                <fullName>Industrial Machinery</fullName>
            </value>
            <value>
                <fullName>Auto Parts &amp; Equipment</fullName>
            </value>
            <value>
                <fullName>Tires &amp; Rubber</fullName>
            </value>
            <value>
                <fullName>Automobiles</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>