force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Hand_Over_Date__c.field-meta.xml
<CustomField>
    <fullName>Hand_Over_Date__c</fullName>
    <label>Hand Over Date</label>
    <type>Date</type>
</CustomField>