force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Head_Sales__c.field-meta.xml
<CustomField>
    <fullName>Head_Sales__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Head Sales</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Supplier_Buyer_Maps3</relationshipName>
    <type>Lookup</type>
</CustomField>