force-app/main/default/objects/Supplier_Buyer_Map__c/fields/In_progress_Invoice_Amount__c.field-meta.xml
<CustomField>
    <fullName>In_progress_Invoice_Amount__c</fullName>
    <formula>total_invoice_value_in_progress__c</formula>
    <label>In progress Invoice Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>