force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Incomlend_imposed_credit_limit__c.field-meta.xml
<CustomField>
    <fullName>Incomlend_imposed_credit_limit__c</fullName>
    <label>Incomlend imposed credit limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>