force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Incomlend_Imposed_Credit_Limit_Reason__c.field-meta.xml
<CustomField>
    <fullName>Incomlend_Imposed_Credit_Limit_Reason__c</fullName>
    <label>Incomlend Imposed Credit Limit Reason</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>