force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Incomlend_product__c.field-meta.xml
<CustomField>
    <fullName>Incomlend_product__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Custom product</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>incomlend_product__c.approved__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>incomlend_product__c</referenceTo>
    <relationshipLabel>Supplier Buyer Maps</relationshipLabel>
    <relationshipName>Supplier_Buyer_Maps</relationshipName>
    <type>Lookup</type>
</CustomField>