force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Inprogress_passthrough_invoice_usd_equiv__c.field-meta.xml
<CustomField>
    <fullName>Inprogress_passthrough_invoice_usd_equiv__c</fullName>
    <label>Inprogress passthrough invoice usd equiv</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>