force-app/main/default/objects/Supplier_Buyer_Map__c/fields/instalment_insurance_count__c.field-meta.xml
<CustomField>
    <fullName>instalment_insurance_count__c</fullName>
    <label>instalment insurance count</label>
    <summaryFilterItems>
        <field>Instalment_insurance_fee__c.Fee_Type__c</field>
        <operation>equals</operation>
        <value>Insurance</value>
    </summaryFilterItems>
    <summaryForeignKey>Instalment_insurance_fee__c.Supplier_buyer_map_instalment__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>