force-app/main/default/objects/Supplier_Buyer_Map__c/fields/insurable__c.field-meta.xml
<CustomField>
    <fullName>insurable__c</fullName>
    <formula>if (begins(buyer_EH_rating__c ,&apos;*&apos;), false,
if(
 value(buyer_EH_rating__c) &lt;=5,
true,
false)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>insurable</label>
    <type>Checkbox</type>
</CustomField>