force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Insurance_cost_for_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Insurance_cost_for_Supplier__c</fullName>
    <defaultValue>0.0073</defaultValue>
    <description>Cost in % for the Supplier</description>
    <inlineHelpText>Cost in % for the Supplier</inlineHelpText>
    <label>Insurance cost for Supplier</label>
    <precision>8</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>