force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Insurance_Coverage_Utilisation_Amount__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Coverage_Utilisation_Amount__c</fullName>
    <inlineHelpText>Sum of invoice amount  financed from starting date of the coverage.</inlineHelpText>
    <label>(test) Insurance Cover Utilisation Amt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>