force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Insurance_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Insurance_End_Date__c</fullName>
    <label>Insurance End Date</label>
    <type>Date</type>
</CustomField>