force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Insurance_Ended__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Ended__c</fullName>
    <formula>IF(Insurance_End_Date__c &lt; TODAY() , TRUE, FAlSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Insurance Ended</label>
    <type>Checkbox</type>
</CustomField>