force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Insurance_Police_Number__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Police_Number__c</fullName>
    <description>Insurance Police Number</description>
    <inlineHelpText>Insurance Police Number , from Insurer</inlineHelpText>
    <label>Insurance Police Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>