force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Insurance_Premium_Logic__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Premium_Logic__c</fullName>
    <label>Insurance Premium Logic</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Instalments</fullName>
                <default>true</default>
                <label>Instalments</label>
            </value>
            <value>
                <fullName>Invoice based</fullName>
            </value>
            <value>
                <fullName>Supplier Insurance</fullName>
            </value>
            <value>
                <fullName>Funders Insurance</fullName>
            </value>
            <value>
                <fullName>Waived</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>