force-app/main/default/objects/Supplier_Buyer_Map__c/fields/Insurance_Utilisation__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Utilisation__c</fullName>
    <formula>( Inprogress_invoice_amount_usd_equiv__c +  prelisting_requested_amount_usd_equiv__c )/ CL_USD_Incomlend_for_this_Map__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Insurance Utilisation %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>